test/sema/assignment.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

fn bar(): number { return 1.0; }

fn main(): void {
    var x: number = 1.0;

    // CHECK: [[# @LINE + 1 ]]:12: error: 'void' expression is not allowed inside assignment
    x = foo();

    let y: number = 3.0;
    
    y = 3.0;

    // CHECK: [[# @LINE + 1 ]]:5: error: expression is not assignable
    bar = 3.0;

    // CHECK: [[# @LINE + 1 ]]:5: error: expression is not assignable
    foo = 3.0;

    // CHECK: [[# @LINE + 1 ]]:7: error: expression is not assignable
    1 + 1 = 2;

    let z: number;
    z = 3.0;
}

fn assignParam(x: number): void {
    // CHECK: [[# @LINE + 1 ]]:7: error: 'x' cannot be mutated
    x = 1.0;
}
